syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Grpc.Service.Services";

// Go needs this to know the import path + package name for generated code.
// Since you have no GitHub repo yet, we'll use a local module name: grpc-jobs
option go_package = "github.com/chrishenyard/grpc_api_go/protos;protos";

package grpc.jobs.v1;

service Jobs {
  rpc CreateJob (JobCreateRequest) returns (JobResponse);
  rpc GetJob (JobRequest) returns (JobResponse);
  rpc GetJobs (JobListOptions) returns (stream JobResponse);
  rpc DeleteJob (JobRequest) returns (google.protobuf.Empty);
}

message JobCreateRequest {
  string job_name = 1;
  string job_description = 2;
  string status = 3;
}

message JobRequest {
  string job_id = 1;
}

message JobResponse {
  string job_id = 1;
  string job_name = 2;
  string job_description = 3;
  string status = 4;
}

message JobListOptions {
  int32 limit = 1;
}
